# haskell-course

./: .replit  README.md  default.nix  haskell-course.cabal  hie.yaml
nix/: default.nix  sources.json
src/: Lesson1.hs  Lesson2_Part1.hs  Lesson2_Part2.hs  Lesson2_Part3.hs  Lesson3.hs  Lesson4.hs  Lesson4_Part2.hs  Lesson4_Part3.hs  Lesson5_Part1.hs  Lesson5_Part2.hs  Lesson6_Part1.hs
src/Lib/: Lesson1.hs  Lesson2_Part1.hs  Lesson2_Part2.hs  Lesson2_Part3.hs  Lesson3.hs  Lesson4.hs  Lesson4_Part2.hs  Lesson4_Part3.hs  Lesson5_Part1.hs  Lesson5_Part2.hs  Lesson6_Part1.hs
