cabal-version:      2.4
name:               haskell-course
version:            0.0.0.1
description:        A brief introductory Haskell course.
category:           Education
stability:          experimental
homepage:           https://github.com/hackworthltd/haskell-course
bug-reports:        https://github.com/hackworthltd/haskell-course
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          © 2020 Hackworth Ltd
author:             Drew Hess <dhess-src@hackworthltd.com>
maintainer:         dhess-src@hackworthltd.com
tested-with:        GHC ==8.8.3
extra-source-files: .hlint.yaml

source-repository head
  type:     git
  location: https://github.com/hackworthltd/haskell-course

flag test-hlint
  description: Build the package's hlint tests.
  manual:      True
  default:     True

common deps
  build-depends: base >=4.12 && <5

common exts
  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    NegativeLiterals
    OverloadedStrings

common opts
  ghc-options:
    -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wcompat -Widentities -Wredundant-constraints -fhide-source-paths
    -fexternal-interpreter -Wno-unused-imports -Wno-type-defaults

common defaults
  import: deps, exts, opts

common exe
  import:      defaults
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

common test
  import:      defaults
  ghc-options: -threaded -rtsopts -with-rtsopts=-N

library
  import:          defaults
  hs-source-dirs:  src
  exposed-modules:
    Lesson1
    Lesson2_Part1
    Lesson2_Part2
    Lesson2_Part3
    Lesson4
    Lib.Lesson1
    Lib.Lesson2_Part1
    Lib.Lesson2_Part2
    Lib.Lesson2_Part3
    Lib.Lesson4
